@@ -112,6 +112,7 @@ New in release 3.4.0 (2017-04-XX):
 * AArch32 port
   - PR3380: Zero should not be enabled by default on arm with the AArch32 HotSpot build
   - PR3384, S8139303, S8167584: Add support for AArch32 architecture to configure and jdk makefiles
+  - PR3385: aarch32 does not support -Xshare:dump
 * Shenandoah
   - Fix Shenandoah argument checking on 32bit builds.
   - Import from Shenandoah tag aarch64-shenandoah-jdk8u101-b14-shenandoah-merge-2016-07-25
